Fix: Add z-index to map container

--- a/Resources/Private/GeoMapEditor/Editor/style.module.css
+++ b/Resources/Private/GeoMapEditor/Editor/style.module.css
@@ -27,6 +27,7 @@
 .mapContainer {
     height: 400px;
     border-bottom: 4px solid var(--colors-contrastBright from global);
+    z-index: 0;
 }
 
 .infoView {
